feat: Initialize Vite project with React 19 types, update TypeScript configuration, and refresh site branding, fonts, and colors.

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luminary | Future of Crypto</title>
+    <title>سند | شريكك الذكي في إدارة نشاطك</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
               navy: {
-                DEFAULT: '#0f1621',
+                DEFAULT: '#17e596',
                 lighter: '#1a2230',
-                darker: '#0a0f18',
+                darker: '#12b375',
               },
               neon: {
                 DEFAULT: '#17e596',
@@ -25,7 +25,7 @@
               },
             },
             fontFamily: {
-              sans: ['Inter', 'sans-serif'],
+              sans: ['Almarai', 'sans-serif'],
             },
           },
         },
@@ -34,8 +34,8 @@
     <style>
       body {
         background-color: #0f1621;
-        color: #ffffff;
-        font-family: 'Inter', sans-serif;
+        color: #f4f7f6;
+        font-family: 'Almarai', sans-serif;
         overflow-x: hidden;
       }
       .glass {
@@ -76,18 +76,10 @@
         to { transform: rotate(360deg); }
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.564.0"
-  }
-}
-</script>
+
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
